--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">ExchangeApp</string>
+    <string name="date">Дата:</string>
+    <string name="current_value">Текущий курс:</string>
+    <string name="code">Код:</string>
+
 </resources>
